[package]
name = "the-new-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.5"
serde = "1.0.145"
chrono = "0.4"
digest = "0.10.5"
cursive = "0.20.0"
hex="0.4.2"
rand="0.7.0"
structopt = "0.3.26"
ed25519-dalek = "1.0.1"

